# grpc-registry

./: Cargo.toml  README.md  build.rs  mykey.pem  setting.toml
api/proto/: registry.proto
src/: authorize.rs  client.rs  common.rs  error.rs  jwt.rs  registrations.rs  reports.rs  server.rs
